--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,8 +1,15 @@
 <h1 style='margin-top:100px;font-size:2rem'>Our official restaurant directory</h1>
 
+<%= form_tag("/search_result", method: "get") do %>
+  <%= label_tag(:q, "Search restaurants by name:") %>
+  <%= text_field_tag(:q) %>
+  <%= submit_tag("Search") %>
+<% end %>
+
+
 <% @restaurants.each do |restaurant| %>
   <h1 style='font-size:1.5rem;margin-top:50px'>Restaurant Name:
-      <%= restaurant.name %>
+      <%= link_to restaurant.name, restaurant %>
   </h1>
   <p>Address: <%= restaurant.address %></p>
 <% end %>
