--- a/app/views/pizzas/index.html.erb
+++ b/app/views/pizzas/index.html.erb
@@ -1,3 +1,5 @@
+<%= link_to "Restaurant Index", restaurants_path %>
+
 <h1 style='margin-top:100px;font-size:2rem'>Our official pizza directory</h1>
 
 <% @pizzas.each do |pizza| %>
