--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,4 +1,16 @@
 <h1 style='margin-top:100px;font-size:2rem'>Our official restaurant directory</h1>
+<!--  -->
+
+<%= link_to "Create a pizza", new_pizza_path %><br><br>
+
+<h3> Search for a restaurant </h3>
+
+<!-- <%= form_tag(restaurants_path, method: :get) do %>
+  <%= text_field(:search, params[:search]) %>
+  <%= submit_tag ("Search") %>
+<% end %>
+<br><br>
+<h3> Full list of restaurants </h3> -->
 
 <% @restaurants.each do |restaurant| %>
   <h1 style='font-size:1.5rem;margin-top:50px'>Restaurant Name:
