--- a/app/views/pizzas/index.html.erb
+++ b/app/views/pizzas/index.html.erb
@@ -1,8 +1,12 @@
 <h1 style='margin-top:100px;font-size:2rem'>Our official pizza directory</h1>
 
+<p><%= link_to "New Pizza", new_pizza_path %></p>
+
 <% @pizzas.each do |pizza| %>
   <h1 style='font-size:1.5rem;margin-top:50px'>Pizza Name:
-      <%= pizza.name %>
+      <%= link_to pizza.name, pizza %>
   </h1>
   <p>Ingredients: <%= pizza.ingredients %></p>
 <% end %>
+
+<p><%= link_to "To Restaurant Directory", restaurants_path %></p>
