--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,8 +1,21 @@
 <h1 style='margin-top:100px;font-size:2rem'>Our official restaurant directory</h1>
-
+<% if !params[:search] %>
 <% @restaurants.each do |restaurant| %>
   <h1 style='font-size:1.5rem;margin-top:50px'>Restaurant Name:
-      <%= restaurant.name %>
+      <%=link_to restaurant.name, restaurant %>
   </h1>
   <p>Address: <%= restaurant.address %></p>
+<% end %>
+<% else %>
+<%= link_to @restaurants.name, @restaurants %>
+<p>Address: <%= @restaurants.address %></p>
+
+<% end %>
+
+
+
+<%= form_with url: '/search', method: :get, local: true do |f| %>
+  <%= f.label :search, "Search for:" %>
+  <%= f.text_field :search, id: :search %>
+  <%= f.submit "Search" %>
 <% end %>
