--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,8 +1,21 @@
-<h1 style='margin-top:100px;font-size:2rem'>Our official restaurant directory</h1>
+<h1 style='margin-top:100px;font-size:2rem'>Mamma Mia!</h1>
+
+<h2 style='margin-top:100px;font-size:2rem'>Search a Restaurant by Name:</h2>
+
+<%= form_tag(restaurants_path, method: :get) do %>
+<%= text_field_tag :name, params[:name] %>
+<%= submit_tag 'Search', name: nil %>
+<% end %>
+
+<h2 style='margin-top:100px;font-size:2rem'>Our Official Restaurant Directory</h2>
 
 <% @restaurants.each do |restaurant| %>
   <h1 style='font-size:1.5rem;margin-top:50px'>Restaurant Name:
-      <%= restaurant.name %>
+      <%= link_to restaurant.name, restaurant %>
   </h1>
   <p>Address: <%= restaurant.address %></p>
 <% end %>
+
+<br>
+
+<%= button_to "all pizzas", pizzas_path, method: 'get' %>
