--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,8 +1,21 @@
 <h1 style='margin-top:100px;font-size:2rem'>Our official restaurant directory</h1>
 
+<% if flash[:errors] %>
+  <p>Errors</p>
+  <% flash[:errors].each do |error| %>
+    <li><%= error %></li>
+  <% end %>
+  <br>
+<% end %>
+
+<%= form_for Restaurant.new, :url => "/restaurants/search", method: 'get' do |f| %>
+  <%= f.label :name %>
+  <%= f.text_field :name %>
+<%- end %>
+
 <% @restaurants.each do |restaurant| %>
   <h1 style='font-size:1.5rem;margin-top:50px'>Restaurant Name:
-      <%= restaurant.name %>
+      <%= link_to restaurant.name, restaurant %>
   </h1>
   <p>Address: <%= restaurant.address %></p>
 <% end %>
