--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -2,7 +2,19 @@
 
 <% @restaurants.each do |restaurant| %>
   <h1 style='font-size:1.5rem;margin-top:50px'>Restaurant Name:
-      <%= restaurant.name %>
+  <%= link_to restaurant.name, restaurant_path(restaurant) 
+  restaurant_path(restaurant)  %>
   </h1>
   <p>Address: <%= restaurant.address %></p>
-<% end %>
+<% end %>  
+
+
+
+
+
+
+
+<!-- 2. On the restaurants index page, 
+a restaurant's name should link to the restaurant's 
+show page. -->
+
