--- a/app/views/pizzas/index.html.erb
+++ b/app/views/pizzas/index.html.erb
@@ -2,7 +2,10 @@
 
 <% @pizzas.each do |pizza| %>
   <h1 style='font-size:1.5rem;margin-top:50px'>Pizza Name:
-      <%= pizza.name %>
+      <%=link_to pizza.name, pizza %>
   </h1>
   <p>Ingredients: <%= pizza.ingredients %></p>
 <% end %>
+
+
+<h1><%= link_to "Create Your Own Pizza", new_pizza_path  %> </h1>
