--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -2,7 +2,12 @@
 
 <% @restaurants.each do |restaurant| %>
   <h1 style='font-size:1.5rem;margin-top:50px'>Restaurant Name:
-      <%= restaurant.name %>
+      <%= link_to restaurant.name, restaurant %>
   </h1>
   <p>Address: <%= restaurant.address %></p>
+<% end %>
+
+<%= form_tag(restaurants_path) do %>
+Search Restaurants <%= text_field_tag :restaurants %>
+<%= submit_tag 'Search' %>
 <% end %>
